--- a/jobHunter/jobHunt/static/style.css
+++ b/jobHunter/jobHunt/static/style.css
@@ -73,12 +73,11 @@
 }
 
 .job-posts {
-    width: 400px;
+    width: 410px;
     height: 450px;
-    padding-left: 25px;
     display: flex;
     flex-direction: column;
-    overflow-y:auto;
+    overflow-y: auto;
 }
 
 .job-posts::-webkit-scrollbar {
@@ -91,10 +90,14 @@
     width: fit-content;
     list-style: none;
     margin: 10px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
 }
 
 .job-button {
-    width: 350px;
+    width: 300px;
     height: 50px;
     border-radius: 15px;
     border-width: 0px;
@@ -108,6 +111,25 @@
     background-color: lightgrey;
     transform: scale(1.1);
 }
+
+.delete-button {
+    border: none;
+    background-color: #E0FFFF;
+    color: black;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    box-shadow: 0px 2px 2px 0px rgb(0,0,0,.5);
+}
+
+.delete-button:hover {
+    background-color: #F08080;
+    color: white;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+}
+
 
 .job-spec {
     width: 400px;
@@ -255,3 +277,36 @@
     align-items: center;
     justify-content: space-evenly;
 }
+
+
+@media (max-width: 768px) {
+    .main-box {
+      flex-direction: column;
+      margin: 20px;
+    }
+  
+    .content,
+    .job-list,
+    .job-spec {
+      width: 100%;
+      height: auto;
+      margin-bottom: 20px;
+    }
+  
+    .button,
+    .search-button,
+    .dropdown-button {
+      min-width: 100%;
+    }
+  
+    .job-posts {
+      width: 100%;
+      height: auto;
+    }
+  
+    .filter-split {
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+  
