--- a/jobHunter/jobHunt/templates/index.html
+++ b/jobHunter/jobHunt/templates/index.html
@@ -9,7 +9,17 @@
 </head>
 <body class="anti-scroll">
     <div class="all">
-        <div class="main-box">
+        <div class="container">
+            asda
+        </div>
+        <div class="container">
+            asda   
+        </div>
+        <div class="container">
+            asda
+        </div>
+        
+        <!-- <div class="main-box">
             <div class="content">
                 <h1 class="app-name"> Job Hunt App </h1>
                 <form action="search/" enctype="multipart/form-data" method="POST">
@@ -100,7 +110,7 @@
                     <button class="button cover-letter-button" type="submit"> Generate cover letter </button>
                 </form>
             </div>
-        </div>
+        </div> -->
     </div>
     <script>
         function showJobDetail(event) {
