--- a/jobHunter/jobHunt/static/style.css
+++ b/jobHunter/jobHunt/static/style.css
@@ -210,12 +210,6 @@
   border-radius: 10px;
 }
 
-.all {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
 .dropdown-button {
     margin: 10px 0px 0px 0px;
     padding: 10px 15px 10px 15px;
@@ -278,35 +272,36 @@
     justify-content: space-evenly;
 }
 
+/* ######################################## */
+.all {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: blue;
 
-@media (max-width: 768px) {
-    .main-box {
-      flex-direction: column;
-      margin: 20px;
-    }
-  
-    .content,
-    .job-list,
-    .job-spec {
-      width: 100%;
-      height: auto;
-      margin-bottom: 20px;
-    }
-  
-    .button,
-    .search-button,
-    .dropdown-button {
-      min-width: 100%;
-    }
-  
-    .job-posts {
-      width: 100%;
-      height: auto;
-    }
-  
-    .filter-split {
-      flex-direction: column;
-      gap: 10px;
+    padding: 2rem 1em;
+}
+
+.container {
+    width: 100%;
+    height: 500px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10px;
+
+    background-color: red;
+}
+
+@media only screen and (max-width: 768px) {
+    .all {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        padding: 2rem 2em;
     }
   }
-  
