--- a/jobHunter/jobHunt/templates/index.html
+++ b/jobHunter/jobHunt/templates/index.html
@@ -10,17 +10,7 @@
 <body class="anti-scroll">
     <div class="all">
         <div class="container">
-            asda
-        </div>
-        <div class="container">
-            asda   
-        </div>
-        <div class="container">
-            asda
-        </div>
-        
-        <!-- <div class="main-box">
-            <div class="content">
+            <div class="sub-container">
                 <h1 class="app-name"> Job Hunt App </h1>
                 <form action="search/" enctype="multipart/form-data" method="POST">
                     {% csrf_token %}
@@ -43,46 +33,90 @@
                         <button class="search-button" type="submit"> Search </button>
                 </form>
             </div>
-
-            <div class="job-list">
-                <ul class="job-posts">
-                    {% for job in job_posts %}
-                    <li class="job-post">
-                        <button type="submit" class="job-button"
-                                data-title="{{ job.title }}"
-                                data-company="{{ job.company }}"
-                                data-date_posted="{{ job.date_posted }}"
-                                data-description="{{ job.description }}"
-                                data-link="{{ job.link }}">
-                            {{ job.title }}
-                        </button>
-                        <button type="button" class="delete-button" data-job-id="{{ job.id }}"> x </button>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </div>
-
-            <div class="job-spec">
-                <div id="job-detail" class="job-detail">
-                    <div class="job-detail-text">
-                        <h2 id="detail-title"></h2>
-                        <h3 id="detail-company"></h3>
-                        <h4 id="detail-date_posted"></h4>
-                        <a id="detail-link" href="#"></a>
-                        <p id="detail-description"></p>
-                    </div>
+            <div class="sub-container bottom">
+                <div class="statistics-button">
+                    <form id="statistics-input" action="/home/show-statistics/" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="statistics" id="statistics" />
+                        <button class="button" type="submit"> Show statistics </button>
+                    </form>
                 </div>
             </div>
         </div>
+        <div class="container">
+            <div class="sub-container list">
+                <div class="job-list">
+                    <ul class="job-posts">
+                        {% for job in job_posts %}
+                        <li class="job-post">
+                            <button type="submit" class="job-button"
+                                    data-title="{{ job.title }}"
+                                    data-company="{{ job.company }}"
+                                    data-date_posted="{{ job.date_posted }}"
+                                    data-description="{{ job.description }}"
+                                    data-link="{{ job.link }}">
+                                {{ job.title }}
+                            </button>
+                            <button type="button" class="delete-button" data-job-id="{{ job.id }}"> x </button>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+            <div class="sub-container bottom split">
+                <div class="dropdown">
+                    <button onclick="dropdown()" class="dropdown-button"> Sort by: </button>
+                    <div id="dropdown-content" class="dropdown-content">
+                        <a href="#" onclick="updateQuery('sort', 'date_posted')"> Date posted </a>
+                        <a href="#" onclick="updateQuery('sort', 'location')"> Location </a>
+                        <a href="#" onclick="updateQuery('sort', 'title')"> Title </a>
+                        <a href="#" onclick="updateQuery('sort', 'company')"> Company name </a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button onclick="dropdown2()" class="dropdown-button"> Order: </button>
+                    <div id="dropdown-content" class="dropdown-content">
+                        <a href="#" onclick="updateQuery('sort', 'date_posted')"> Date posted </a>
+                        <a href="#" onclick="updateQuery('sort', 'location')"> Location </a>
+                        <a href="#" onclick="updateQuery('sort', 'title')"> Title </a>
+                        <a href="#" onclick="updateQuery('sort', 'company')"> Company name </a>
+                    </div>
+                </div>
+                <!-- <div id="dropdown-content2" class="dropdown-content">
+                    <a href="#" onclick="updateQuery('direction', 'ASC')"> Ascending </a>
+                    <a href="#" onclick="updateQuery('direction', 'DESC')"> Descending </a>
+                </div> -->
+            </div>
+        </div>
+        <div class="container">
+            <div class="sub-container">
+                <div class="job-spec">
+                    <div id="job-detail" class="job-detail">
+                        <div class="job-detail-text">
+                            <h1 id="detail-title"></h1>
+                            <h2 id="detail-company"></h2>
+                            <h3 id="detail-date_posted"></h3>
+                            <a id="detail-link" href="#"></a>
+                            <p id="detail-description"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="sub-container bottom">
+                <div class="letter-button">
+                    <form  id="cover-letter-input" action="/home/write-cover-letter/" enctype="multipart/form-data" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="job-description" id="job-description" />
+                        <button class="button" type="submit"> Generate cover letter </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        
+        <!-- <div class="main-box">
+        </div>
 
         <div class="main-box sub-box">
-             <div class="content invisible cover-letter">
-                <form  id="statistics-input" action="/home/show-statistics/" method="POST">
-                    {% csrf_token %}
-                    <input type="hidden" name="statistics" id="statistics" />
-                    <button class="button" type="submit"> Show statistics </button>
-                </form>
-            </div>
             <div class="content invisible cover-letter filter">
                 <div class="filter-split">
                     <div class="dropdown">
@@ -111,6 +145,43 @@
                 </form>
             </div>
         </div> -->
+
+        <!-- <div class="main-box sub-box">
+            <div class="content invisible cover-letter">
+               <form  id="statistics-input" action="/home/show-statistics/" method="POST">
+                   {% csrf_token %}
+                   <input type="hidden" name="statistics" id="statistics" />
+                   <button class="button" type="submit"> Show statistics </button>
+               </form>
+           </div>
+           <div class="content invisible cover-letter filter">
+               <div class="filter-split">
+                   <div class="dropdown">
+                     <button onclick="dropdown()" class="dropdown-button"> Sort by: </button>
+                     <div id="dropdown-content" class="dropdown-content">
+                       <a href="#" onclick="updateQuery('sort', 'date_posted')"> Date posted </a>
+                       <a href="#" onclick="updateQuery('sort', 'location')"> Location </a>
+                       <a href="#" onclick="updateQuery('sort', 'title')"> Title </a>
+                         <a href="#" onclick="updateQuery('sort', 'company')"> Company name </a>
+                     </div>
+                   </div>
+                   <div class="dropdown">
+                     <button onclick="dropdown2()" class="dropdown-button"> Order: </button>
+                     <div id="dropdown-content2" class="dropdown-content">
+                       <a href="#" onclick="updateQuery('direction', 'ASC')"> Ascending </a>
+                       <a href="#" onclick="updateQuery('direction', 'DESC')"> Descending </a>
+                     </div>
+                   </div>
+               </div>
+           </div>
+           <div class="content invisible cover-letter">
+               <form  id="cover-letter-input" action="/home/write-cover-letter/" enctype="multipart/form-data" method="POST">
+                   {% csrf_token %}
+                   <input type="hidden" name="job-description" id="job-description" />
+                   <button class="button cover-letter-button" type="submit"> Generate cover letter </button>
+               </form>
+           </div>
+       </div> -->
     </div>
     <script>
         function showJobDetail(event) {
@@ -190,6 +261,7 @@
 
         document.querySelectorAll(".delete-button").forEach(button => {
             button.addEventListener("click", async () => {
+                console.log("clicked");
                 const job_title = button.getAttribute("data-job-id");
                 const confirmed = confirm("Are you sure you want to delete this job?");
                 if (!confirmed) return;
