--- a/jobHunter/jobHunt/static/style.css
+++ b/jobHunter/jobHunt/static/style.css
@@ -6,8 +6,28 @@
 }
 
 .anti-scroll {
+    height: 100%;
     overflow: hidden;
+    margin: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+html {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 
 
 .main-box {
@@ -31,12 +51,26 @@
     cursor: pointer;
 }
 
+#statistics-container {
+    height: 10%;
+}
+
 .statistics-button {
     width: 100%;
 }
 
-.letter-button {
+.cover-letter-container {
     width: 100%;
+}
+
+.disabled {
+    background-color: grey;
+    pointer-events: none; 
+}
+
+.enabled:hover {
+    background-color: #2D68C4;
+    transition: all 0.1s ease-out;
 }
 
 .search-button {
@@ -90,12 +124,22 @@
   border-radius: 10px;
 }
 
-.dropdown {
+.dropdown-4 {
     width: 100%;   
-    height: auto;
     
     display: flex;
     flex-direction: column;
+
+    background-color: red;
+}
+
+.dropdown-2 {
+    width: 100%;   
+    
+    display: flex;
+    flex-direction: column;
+
+    background-color: blue;
 }
 
 .dropdown-button {
@@ -120,6 +164,7 @@
   background-color: lightblue;
   color: white;
   width: 50%;
+  box-shadow: 0px 3px 3px 0px rgb(0,0,0,.2);
   z-index: 999;
 }
 
@@ -147,8 +192,25 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
- 
+    
     padding: 2rem 1em;
+}
+
+footer {
+    height: 10%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    
+    margin-top: 20px;
+    border-radius: 20% 50% 0% 0%;
+
+    background-color: lightblue;
+    color: steelblue;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 .container {
@@ -192,13 +254,21 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: end;
+    align-items: flex-start;
 }
 
 .app-name {
     color: white;
     font-size: 2em;
     text-shadow: 0.2em 0.2em #558abb;
+    margin-bottom: 0.2em;
+}
+
+.app-desc {
+    color: white;
+    font-style: italic;
+    margin-top: 0;
+    margin-bottom: 1.2em;
 }
 
 .job-list {
@@ -313,5 +383,9 @@
         align-items: center;
 
         padding: 2rem 2em;
+    }
+
+    footer {
+        font-size: 0.8rem;
     }
   }
