--- a/jobHunter/jobHunt/static/style.css
+++ b/jobHunter/jobHunt/static/style.css
@@ -389,3 +389,24 @@ footer {
         font-size: 0.8rem;
     }
   }
+
+  .resume {
+    width: 100%;
+    height: auto;
+  }
+
+  .resume-input {
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  .resume-input {
+    width: 100%;
+    height: 500px;
+    box-sizing: border-box;
+    overflow: auto;       /* Add scroll if content is too much */
+}
