--- a/jobHunter/jobHunt/templates/index.html
+++ b/jobHunter/jobHunt/templates/index.html
@@ -52,7 +52,7 @@
                     <ul class="job-posts">
                         {% for job in job_posts %}
                         <li class="job-post">
-                            <button type="submit" class="job-button" onclick="jsEnableElement('cover-letter-button');"
+                            <button type="submit" class="job-button" onclick="jsEnableElement('resume-button');"
                                     data-title="{{ job.title }}"
                                     data-company="{{ job.company }}"
                                     data-date_posted="{{ job.date_posted }}"
@@ -89,7 +89,10 @@
             <div class="sub-container">
                 <div class="job-spec">
                     <div id="job-detail" class="job-detail">
-                        <div class="job-detail-text">
+                        <div class="resume" id="resume">
+                            <textarea id="resume-input" class="resume-input" type="text" name="resume" placeholder="Copy and paste content of your resume here..."></textarea>
+                        </div>
+                        <div id="job-detail-text" class="job-detail-text">
                             <h1 id="detail-title"></h1>
                             <h2 id="detail-company"></h2>
                             <h3 id="detail-date_posted"></h3>
@@ -101,137 +104,19 @@
             </div>
             <div class="sub-container bottom">
                 <div class="cover-letter-container">
+                    <button id="resume-button" class="button disabled" onclick="popUpResume()" type="submit"> Upload resume for cover letter </button>
                     <form  id="cover-letter-input" action="/home/write-cover-letter/" enctype="multipart/form-data" method="POST">
                         {% csrf_token %}
-                        <input type="hidden" name="job-description" id="job-description" />
-                        <button id="cover-letter-button" class="button disabled" type="submit"> Generate cover letter </button>
+                        <input type="hidden" name="resume-hidden" id="resume-hidden">
+                        <input type="hidden" name="job-description-hidden" id="job-description-hidden" />
+                        <button id="cover-letter-button" class="button" type="submit"> Generate cover letter </button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        function jsEnableElement(id) {
-            if ( document.getElementById(id) ) {
-                document.getElementById(id).removeAttribute("disabled");
-                document.getElementById(id).className = "button";
-            }
-        }
-
-        function showJobDetail(event) {
-            const button = event.currentTarget;
-
-            const title = button.dataset['title'];
-            const description = button.dataset['description'];
-            const company = button.dataset['company'];
-            const date_posted = button.dataset['date_posted'];
-            const link = button.dataset['link'];
-
-            document.getElementById('detail-title').innerText = title;
-            document.getElementById('detail-company').innerText = company;
-            document.getElementById('detail-description').innerText = description;
-            document.getElementById('detail-date_posted').innerText = date_posted;
-            document.getElementById('detail-link').innerText = 'Link to job';
-            document.getElementById('detail-link').href = link;
-            document.getElementById('job-detail').style.display = 'block';
-        }
-
-        function initializeJobButtons() {
-            const buttons = document.querySelectorAll('.job-button');
-            buttons.forEach(function(button) {
-                button.addEventListener('click', showJobDetail);
-            });
-        }
-
-        window.addEventListener('DOMContentLoaded', initializeJobButtons);
-
-        var cover_letter_input = document.getElementById('cover-letter-input');
-        function handleJobDescription(event) {
-            const job_description = document.getElementById('detail-description').innerText;
-            document.getElementById('job-description').value = job_description;
-        }
-
-        cover_letter_input.addEventListener('submit', handleJobDescription);
-
-        function dropdown() {
-          document.getElementById("dropdown-content").classList.toggle("show");
-        }
-
-        function dropdown2() {
-          document.getElementById("dropdown-content2").classList.toggle("show");
-        }
-
-        window.onclick = function(event) {
-          if (!event.target.matches('.dropdown-button')) {
-            var dropdowns = document.getElementsByClassName("dropdown-content");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-              var openDropdown = dropdowns[i];
-              if (openDropdown.classList.contains('show')) {
-                openDropdown.classList.remove('show');
-              }
-            }
-          }
-        }
-
-        window.onclick = function(event) {
-          if (!event.target.matches('.dropdown-button')) {
-            var dropdowns = document.getElementsByClassName("dropdown-content2");
-            var i;
-            for (i = 0; i < dropdowns.length; i++) {
-              var openDropdown = dropdowns[i];
-              if (openDropdown.classList.contains('show')) {
-                openDropdown.classList.remove('show');
-              }
-            }
-          }
-        }
-
-        function updateQuery(key, value) {
-            const url = new URL(window.location);
-            url.searchParams.set(key, value); 
-            window.location = url.href;      
-        }
-
-        document.querySelectorAll(".delete-button").forEach(button => {
-            button.addEventListener("click", async () => {
-                const job_title = button.getAttribute("data-job-id");
-                const confirmed = confirm("Are you sure you want to delete this job?");
-                if (!confirmed) return;
-
-                try {
-                    const response = await fetch(`delete/${job_title}/`, {
-                        method: "DELETE",
-                        headers: {
-                            "X-CSRFToken": getCookie("csrftoken")
-                        }
-                    });
-
-                    if (response.status === 204) {
-                        button.closest(".job-post").remove();
-                    }
-                } catch (error) {
-                    alert("Failed to delete job. Please try again.");
-                }
-            });
-        });
-        
-        function getCookie(name) {
-            let cookieValue = null;
-            if (document.cookie && document.cookie !== '') {
-                const cookies = document.cookie.split(';');
-                for (let cookie of cookies) {
-                    cookie = cookie.trim();
-                    if (cookie.startsWith(name + '=')) {
-                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                        break;
-                    }
-                }
-            }
-            return cookieValue;
-        }
-
-    </script>
+    <script src="{% static 'utils.js' %}"></script>
+    <script src="{% static 'scripts.js' %}"></script>
 </body>
 
 <footer>
