--- a/jobHunter/jobHunt/static/style.css
+++ b/jobHunter/jobHunt/static/style.css
@@ -21,13 +21,28 @@ html {
     flex-direction: column;
 }
 
+nav {
+    display: flex;
+    flex-direction: row;
+
+    background-color: lightblue;
+    justify-content: center;
+    padding: 20px;
+}
+
+.nav-option {
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    background-color:#E0FFFF;
+    text-decoration: none;
+}
+
 .title {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
-
 
 
 .main-box {
@@ -193,18 +208,20 @@ html {
     justify-content: space-evenly;
     align-items: center;
     
-    padding: 2rem 1em;
+    padding: 0 1em;
 }
 
 footer {
-    height: 10%;
-    width: 100%;
+    height: 100px;
+    width: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
     
     margin-top: 20px;
+    padding: 0px 20px;
+    gap: 10px;
     border-radius: 20% 50% 0% 0%;
 
     background-color: lightblue;
@@ -340,7 +357,7 @@ footer {
     height: 35px;
 }
 
-.job-spec {
+.job-specification {
     width: 90%;
     height: 100%;
     background-color: lightblue;
@@ -386,6 +403,7 @@ footer {
     }
 
     footer {
+        height: 200px;
         font-size: 0.8rem;
     }
   }
