--- a/jobHunter/jobHunt/templates/index.html
+++ b/jobHunter/jobHunt/templates/index.html
@@ -12,7 +12,7 @@
     <nav>
         <form action="{% url 'logout' %}" method="post">
             {% csrf_token %}
-            <button type="submit">Logout</button>
+            <button class="logout" type="submit">Logout</button>
         </form>
     </nav>
     {% endif %}
