--- a/jobHunter/jobHunt/static/style.css
+++ b/jobHunter/jobHunt/static/style.css
@@ -26,7 +26,7 @@ nav {
     flex-direction: row;
 
     background-color: lightblue;
-    justify-content: center;
+    justify-content: end;
     padding: 20px;
 }
 
@@ -387,6 +387,20 @@ footer {
 .job-detail-text h1 { font-size: 1em; }
 .job-detail-text h2 { font-size: 0.9em; }
 .job-detail-text h3, .job-detail-text a, .job-detail-text p { font-size: 0.7em; }
+
+.logout {
+    padding: 0.5em 1em;
+    font-size: 1.2em;
+    background-color: #4B9CD3;
+    color: white;
+    border-width: 0;
+    cursor: pointer;
+}
+
+.logout:hover {
+    background-color: #2980B9;
+}
+
 
 @media only screen and (max-width: 768px) {
     .anti-scroll {
